Fix wrong position of reduced logo for mobile-left and desktop-middle-center

--- a/assets/base.css
+++ b/assets/base.css
@@ -2274,6 +2274,7 @@ input[type='checkbox'] {
     grid-template-areas: 'navigation heading icons';
     grid-template-columns: 1fr auto 1fr;
     column-gap: 2rem;
+    text-align: center;
   }
 
   .header--top-center {
@@ -2336,7 +2337,7 @@ input[type='checkbox'] {
 
   .header--mobile-left .header__heading,
   .header--mobile-left .header__heading-link {
-    text-align: center;
+    text-align: start;
     justify-self: start;
   }
 
